...
            .fillMaxWidth()
            .padding(16.dp)
    ) {
        TextField(
            value = searchTerm,
            onValueChange = { searchTerm = it },
            label = { Text("City or ZIP") },
            keyboardOptions = KeyboardOptions(
                imeAction = ImeAction.Done,
                keyboardType = KeyboardType.Text
            ),
            keyboardActions = KeyboardActions(
                onDone = {
...
